refactor: update application configuration and improve user management logic